--- a/File_CSS/women.css
+++ b/File_CSS/women.css
@@ -8,3 +8,15 @@
 	position: relative;
 	top: 10px;
 }
+@media screen and (min-width: 500px) {
+
+}
+
+@media screen and (min-width: 768px) {
+
+}
+@media screen and (min-width: 1000px) {
+
+}
+
+
